# coffee-house-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  assistant.py  bot.py  config.py  database.py  main.py  prompts.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
coffee_assistant/: __init__.py  __main__.py  assistant.py  bot.py  config.py  database.py  prompts.py
tests/: test_assistant.py  test_config.py  test_database.py
