[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-house-assistant"
version = "0.1.0"
description = "Telegram coffee house assistant powered by Gemini"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "uwaspwned" }]
dependencies = [
    "aiogram==3.28.2",
    "aiosqlite==0.21.0",
    "google-genai==2.8.0",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "ruff>=0.9,<1.0",
]

[project.scripts]
coffee-assistant = "coffee_assistant.bot:main"

[tool.setuptools.packages.find]
include = ["coffee_assistant*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
